--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,6 +7,23 @@
     right: 74px;
 }
 
+.titles{
+    color: rgba(255, 255, 255, 0.4) !important;
+}
+
+.site-hovered{
+    color: rgba(255,255,255) !important;
+}
+
+.loader {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(255, 255, 255);
+    top: 0;
+    z-index: 9999999;
+}
+
 .uk-navbar-toggle {
     color: #ffffff;
 }
@@ -56,6 +73,11 @@ a:hover {
     padding-bottom: var(--slogan-margin);
 }
 
+.portfolio {
+    padding-left: var(--work-margin);
+    padding-top: var(--slogan-margin);
+}
+
 .slogan-title {
     font-style: normal;
     font-weight: 300;
@@ -74,12 +96,21 @@ a:hover {
     color: rgba(0, 0, 0, 0.85);
 }
 
+.uk-logo > img {
+    height: 100px;
+    width: auto;
+}
+
 .studio-logo {
     margin-left: 30px;
 }
 
 .studio-menu {
     margin-right: 60px;
+}
+
+.index-cover {
+    padding-left: 15px;
 }
 
 .filter {
@@ -132,10 +163,15 @@ a:hover {
     margin-bottom: 30px;
 }
 
+.uk-subnav > * > :first-child {
+    text-transform: none;
+}
+
 .uk-subnav-pill > .uk-active > a,
 .uk-subnav-pill > * > a:hover {
     text-decoration: none;
     color: black;
+    text-transform: none;
     background-color: #ffffff;
     background: 0;
     border-bottom: 2px solid black;
@@ -245,6 +281,7 @@ a:hover {
     padding-top: var(--about-top-margin);
     padding-right: var(--about-team-side-margin);
 }
+
 .contact,
 .about {
     padding-left: var(--about-side-margin);
@@ -252,8 +289,17 @@ a:hover {
     padding-right: var(--about-side-margin);
 }
 
-.contact-desc,
 .contact-sub {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 32px;
+    margin: 0;
+    align-items: center;
+    letter-spacing: -0.015em;
+
+    color: rgba(0, 0, 0, 0.6);
+}
+.contact-desc {
     font-weight: 300;
     font-size: 18px;
     line-height: 32px;
@@ -267,4 +313,8 @@ a:hover {
 .contact-desc {
     font-weight: normal;
     display: block;
+}
+
+#map {
+    height: 500px;
 }
